--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kartik-v/mpdf",
+    "name": "saritasa/mpdf",
     "type": "library",
     "description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support. This is a fork of the official mPDF library.",
     "keywords": ["php", "pdf", "utf-8"],
